--- a/Source/BackEnd/package.json
+++ b/Source/BackEnd/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.1",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
